@@ -22,6 +22,18 @@
     <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
     </listener>
+    
+    <!-- Guarantees that under all JSF exit conditions, the flow context will be cleaned up -->
+    <filter>
+    	<filter-name>Flow System Cleanup Filter</filter-name>
+    	<filter-class>org.springframework.webflow.executor.jsf.FlowSystemCleanupFilter</filter-class>
+    </filter>
+
+	<!-- Filters all request to *.faces to the Flow System Cleanup Filter for guarenteed cleanup -->
+	<filter-mapping>
+		<filter-name>Flow System Cleanup Filter</filter-name>
+		<url-pattern>*.faces</url-pattern>
+	</filter-mapping>
 
     <!-- The front controller for the JSF application, responsible for handling all application requests -->
     <servlet>
